test/functions/bradc/intents-error.good
Error: Assigning to a constant expression (intents-error.chpl:25)
